# soc-sage

./: .env.example  README.md  pyproject.toml
soc_sage/: agent.py  prompts.py  tools.py
soc_sage/sub_agents/assessor/: __init__.py  agent.py  prompt.py
soc_sage/sub_agents/knowledge_updater/: __init__.py  agent.py  prompt.py
soc_sage/sub_agents/log_analyst/: __init__.py  agent.py  prompt.py
soc_sage/sub_agents/rag/: __init__.py  agent.py  prompt.py
soc_sage/sub_agents/report_writer/: __init__.py  agent.py  prompt.py
soc_sage/sub_agents/researcher/: __init__.py  agent.py  prompt.py
soc_sage/utils/: __init__.py  splunk_api.py
